<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/customers_name_tab_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/current_time_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/customers_name_et_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_customers_name_hint"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/current_time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/customers_name_tab_input"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/current_time_str" />

    <TextView
        android:id="@+id/current_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:text="@string/current_date_str"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/current_time_tv"
        app:layout_constraintTop_toBottomOf="@+id/current_time_tv" />


</androidx.constraintlayout.widget.ConstraintLayout>